MODDATAIMP-1136 Handle update job execution status during file upload successively (#357)
* MODDATAIMP-1136 Handle update job execution status during file upload successively

* ensure atomicity

* fix tests

(cherry picked from commit 08fac4c61d361032a8b99918b49468a2140c97b3)